--- a/main.html
+++ b/main.html
@@ -10,7 +10,34 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<form action="" method ="post">
+<label for="name">Name</label>
+<input type="text" id="name" required><br><br>
+<label for="name">Email</label>
+<input type="text" id="email" required><br><br>
+<label for="Gender" > Gender </label> <br>
+<label for="Gender">Male</label>
+<input type="radio" id="" name="Gender" value="Male">
+<label for="Gender">Female</label>
+<input type="radio" id="" name="Gender" value="Female"><BR></BR>
+<label for="cars">Car Brands</label>
 
+<select name="cars" id="cars">
+  <option value="BMW">BMW</option>
+  <option value="Audi">Audi</option>
+  <option value="Mercedez">Mercedez</option>
+  <!-- <option value="audi">Audi</option> -->
+</select><BR></BR>
+<label for="carage">Car Age</label>
+<input type="number" id="carage" required><br><br>
+<label for="dop">Date of Purchase (dop)</label>
+<input type="date" id="dop" required><br><br>
+
+<label for="password">Password</label>
+<input type="password" id="password" required><br><br>
+
+<input type="submit" value="Submit">
+</form>
 </body>
 
 </html>
