--- a/main.html
+++ b/main.html
@@ -35,8 +35,7 @@
 
 <label for="password">Password</label>
 <input type="password" id="password" required><br><br>
-
-<input type="submit" value="Submit">
+<button type="submit">Submit</button>
 </form>
 </body>
 
