--- a/main.html
+++ b/main.html
@@ -15,11 +15,11 @@
 <input type="text" id="name" required><br><br>
 <label for="name">Email</label>
 <input type="text" id="email" required><br><br>
-<label for="Gender" > Gender </label> <br>
-<label for="Gender">Male</label>
-<input type="radio" id="" name="Gender" value="Male">
-<label for="Gender">Female</label>
-<input type="radio" id="" name="Gender" value="Female"><BR></BR>
+<label for="gender" > Gender </label> <br>
+<label for="gender">Male</label>
+<input type="radio" id="" name="gender" value="Male">
+<label for="gender">Female</label>
+<input type="radio" id="" name="gender" value="Female"><BR></BR>
 <label for="cars">Car Brands</label>
 
 <select name="cars" id="cars">
