--- a/main.html
+++ b/main.html
@@ -17,9 +17,9 @@
 <input type="text" id="email" required><br><br>
 <label for="gender" > Gender </label> <br>
 <label for="gender">Male</label>
-<input type="radio" id="" name="gender" value="Male">
+<input type="radio" id="" name="gender" value="Male" required>
 <label for="gender">Female</label>
-<input type="radio" id="" name="gender" value="Female"><BR></BR>
+<input type="radio" id="" name="gender" value="Female" required><BR></BR>
 <label for="cars">Car Brands</label>
 
 <select name="cars" id="cars">
