--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 <form action="" method ="post">
 <label for="name">Name</label>
 <input type="text" id="name" required><br><br>
-<label for="name">Email</label>
+<label for="email">Email</label>
 <input type="text" id="email" required><br><br>
 <label for="gender" > Gender </label> <br>
 <label for="gender">Male</label>
